--- a/INTRO.Rmd
+++ b/INTRO.Rmd
@@ -47,7 +47,7 @@ Much of class time and lab time will be spent on hands-on, in-class exercises. T
 3. Working on your final group projects.  
 
 ## Final projects
-It is never too early to start thinking about final project ideas and datasets. For the final projects, you will work in small groups to perform a population viability analysis (PVA) to rank conservation or management actions for a species of conservation concern (species of your choice!). I will begin compiling a list of online databases that might be useful for your projects (e.g., [GBIF](gbif.org)) that I will post to the course website. In the meantime, start thinking about what species you might be interested in modeling, and what conservation and management strategies you might want to test.    
+It is never too early to start thinking about final project ideas and datasets. For the final projects, you will work in small groups to perform a population viability analysis (PVA) to rank conservation or management actions for a species of conservation concern (species of your choice!). I will begin compiling a list of online databases that might be useful for your projects (e.g., [GBIF](http://www.gbif.org/) that I will post to the course website. In the meantime, start thinking about what species you might be interested in modeling, and what conservation and management strategies you might want to test.    
 
 ## Quizzes
 Some class periods will begin with a short, unannounced quiz. The questions will not be difficult, and are just intended to (1) make sure you are keeping up with the readings and (2) give me some feedback about your progress. 
